@@ -1,4 +1,4 @@
-.TH "srun" "1" "SLURM 2.2" "October 2010" "SLURM Commands"
+.TH "srun" "1" "SLURM 2.2" "November 2010" "SLURM Commands"
 
 .SH "NAME"
 srun \- Run parallel jobs
@@ -384,7 +384,7 @@ it's allocation. Note that all CPUs allocated to a job are available
 to each job step unless the \fB\-\-exclusive\fR option is used plus
 task affinity is configured. Since resource management is provided by
 processor, the \fB\-\-ntasks\fR option must be specified, but the
-following options should NOT be specified \fB\-\-nodes\fR,
+following options should NOT be specified
 \fB\-\-relative\fR, \fB\-\-distribution\fR=\fIarbitrary\fR.
 See \fBEXAMPLE\fR below.
 
